Adapt to newer CMake version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,19 +5,14 @@
 ##          http://www.boost.org/LICENSE_1_0.txt)
 
 
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 3.0)
 
 project(parse_logs)
 add_definitions(-D_SCL_SECURE_NO_WARNINGS)
 
 SET(Boost_USE_STATIC_LIBS ON)
 SET(Boost_USE_MULTITHREAD ON)
-FIND_PACKAGE( Boost COMPONENTS system filesystem regex)
-
-INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
-LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
-
-#include_directories( ${parse_logs_SOURCE_DIR})
+find_package( Boost 1.71 REQUIRED COMPONENTS filesystem regex)
 
 add_subdirectory (parse_log)
 
