Attempt to cross-compile from linux to Windows.
Cross compilation succeeds and creates a binary, but the binary crashes
at startup.

linux build is not affected.

--- a/parse_log/CMakeLists.txt
+++ b/parse_log/CMakeLists.txt
@@ -46,8 +46,9 @@ add_executable(
 target_link_libraries(
     parse_log
     PUBLIC
+        CONAN_PKG::boost
         project_options 
-        CONAN_PKG::boost)	
+        )	
 
 
 
