Implement linear interpolation for specific aux channel.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ conan_cmake_run(
         CMAKE_TARGETS # individual targets to link to
     BUILD
         missing
-    BUILD_TYPE Release
+    BUILD_TYPE Debug
     ${EXTRA_PROFILE}
 )
 
