Change tool registration so that everyting works on Windows.
The self-registration of tools would lead to crashes on Windows due to
initialization order issues. This is now replaced with explicit
registration of a list of tools in function register_all_tools().

The code has been written to create minimum compile-time depencencies,
so that tools still can be compiled in splendid isolation without
burdening the compilation unit of register_all_tools();

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,19 +17,24 @@ SET(Boost_USE_MULTITHREAD ON)
 # cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=../../Toolchain-cross-mingw32-linux.cmake -DBUILD_FOR_WINDOWS=YES -G Ninja ../..
 if(${BUILD_FOR_WINDOWS})
     set( EXTRA_PROFILE PROFILE ${CMAKE_SOURCE_DIR}/linux_to_windows.conanprofile)
-    set(CMAKE_CXX_STANDARD_LIBRARIES "-static-libgcc -static-libstdc++ ${CMAKE_CXX_STANDARD_LIBRARIES}")
-    #set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-Bstatic,--whole-archive -lwinpthread -Wl,--no-whole-archive")
+    #set(CMAKE_CXX_STANDARD_LIBRARIES "-static-libgcc -static-libstdc++ ${CMAKE_CXX_STANDARD_LIBRARIES}")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc -static-libstdc++ -Wl,-Bstatic,--whole-archive -Wl,--no-whole-archive")
 endif(${BUILD_FOR_WINDOWS})
 
 conan_cmake_run(
     REQUIRES
         boost/1.75.0
+
     OPTIONS
-        BASIC_SETUP
-        CMAKE_TARGETS # individual targets to link to
+        boost:without_fiber=True
+        boost:without_stacktrace=True
+        boost:without_wave=True
+    
+    BASIC_SETUP
+    CMAKE_TARGETS # individual targets to link to
     BUILD
         missing
-    BUILD_TYPE Debug
+    BUILD_TYPE Release
     ${EXTRA_PROFILE}
 )
 
